<resources>
    <string name="app_name">聚寶盆</string>
    <string name="note">備註：</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="go_edit">修改</string>
    <string name="save">儲存</string>
    <string name="cancel">取消</string>
    <string name="add">＋新增項目</string>
    <string name="update_name">修改名稱</string>
    <string name="l">/</string>
    <string name="date">日期：</string>
    <string name="day">日</string>
    <string name="year_AD">西元年</string>
    <string name="usd_ex_rate">美金匯率：</string>
    <string name="total_without_usd">六、不含美股總值：</string>
    <string name="total">七、含美股總值：</string>
    <string name="enterPassword">輸入密碼</string>
    <string name="verify">確認</string>
    <string name="update_password">更改密碼</string>
    <string name="enterNewPassword">輸入新密碼</string>
    <string name="enterOriginalPassword">輸入原密碼</string>

    <string-array name="month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year_array">
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
        <item>2051</item>
        <item>2052</item>
        <item>2053</item>
        <item>2054</item>
        <item>2055</item>
        <item>2056</item>
        <item>2057</item>
        <item>2058</item>
        <item>2059</item>
        <item>2060</item>
        <item>2061</item>
        <item>2062</item>
        <item>2063</item>
        <item>2064</item>
        <item>2065</item>
        <item>2066</item>
        <item>2067</item>
        <item>2068</item>
        <item>2069</item>
        <item>2070</item>
        <item>2071</item>
        <item>2072</item>
        <item>2073</item>
        <item>2074</item>
        <item>2075</item>
        <item>2076</item>
        <item>2077</item>
        <item>2078</item>
        <item>2079</item>
        <item>2080</item>
        <item>2081</item>
        <item>2082</item>
        <item>2083</item>
        <item>2084</item>
        <item>2085</item>
        <item>2086</item>
        <item>2087</item>
        <item>2088</item>
        <item>2089</item>
        <item>2090</item>
        <item>2091</item>
        <item>2092</item>
        <item>2093</item>
        <item>2094</item>
        <item>2095</item>
        <item>2096</item>
        <item>2097</item>
        <item>2098</item>
        <item>2099</item>
        <item>2100</item>
    </string-array>
</resources><!--
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (1, -1, 24259, "一、流動現金", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (2, 1, 24259, "a. 活存", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (3, 1, 24259, "b. 現金", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (4, 1, 24259, "c. 外幣", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (5, -1, 24259, "二、投資帳現值", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (6, 5, 24259, "a. 證券", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (7, 5, 24259, "b. 基金", "0", "")
INSERT OR REPLACE INTO tbl_form (_id, parent_id, year_month, name, value, note) VALUES (8, 5, 24259, "c. 黃金", "0", "")
-->