<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_show"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/number_edit"
            android:textSize="22sp"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/number_width"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/number_show"
            android:textSize="22sp"
            android:maxLines="1"
            android:layout_width="@dimen/number_width"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/usd"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_ex_rate"/>
            <EditText
                android:id="@+id/usd_number_edit"
                android:maxLines="1"
                android:textSize="22sp"
                android:inputType="numberDecimal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#999"
            android:textSize="18sp"
            android:backgroundTint="#fff"/>
        <Button
            android:id="@+id/update_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/update_name"
            android:textColor="#999"
            android:textSize="18sp"
            android:backgroundTint="#fff"/>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_restore_from_trash_40"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/note_edit"
            android:layout_width="400dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>