<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="30sp"
                android:layout_weight="2"/>
            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="30sp"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <Button
            android:id="@+id/go_edit_button"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_edit"/>
    </LinearLayout>
</ScrollView>